--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@anthropic-ai/sdk": "^0.71.2",
     "@clerk/nextjs": "^6.36.3",
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
